# dstk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dstk_core/: CMakeLists.txt  dstk_core.cpp
dstk_core/include/: dstk_core.hpp
dstk_core/include/math/: mat_utils.hpp  matrix.hpp
dstk_core/src/: dstk_core.cpp  dstk_mat.cpp
dstk_core/tests/: CMakeLists.txt  test_dstk.cpp
